# usgs

./: .gitignore  README.md  environment.yml  requirements.txt  scenes.txt  setup.cfg  setup.py  test.py  usgs.py
docs/: Readme-dev.md
examples/: heron.json
scripts/: reset_downloads.py  selective_download.py  sync.sh  test.csv  test.sh
src/usgs/: __init__.py
src/usgs/api/: api.py  api_context.py  url_settings.py
src/usgs/cli/: cli.py  cli_commands.py
src/usgs/datastore/: datastore.py
src/usgs/download/: dataset_info.py  download.py  find_bad_files.py  index_files.py  multithreaded_downloader.py
src/usgs/utils/: file_utils.py  get_row_path.py  sorting_hat.py
tests/: settings.py
tests/api/: api.py  api_context.py  search_criteria.py
tests/cli/: cli.py
tests/utils/: latlong.py
usgs/api/: api.py  api_context.py  catalogs.py  search_criteria.py  url_settings.py  util.py
usgs/api/json-static/: Readme.txt
usgs/api/json-static/1.2.1/: DatasetFields.schema.json  DatasetSearch.schema.json  GridToLatLong.schema.json  Login.schema.json  Logout.schema.json  SceneMetadata.schema.json  SceneSearch.schema.json  SceneSearchHits.schema.json  Status.schema.json
usgs/api/json-static/1.4.0/: GenericResponse.schema.json  dataset_fields.data.schema.json  dataset_search.data.schema.json  grid2ll.data.schema.json  scene_search.data.schema.json
usgs/cli/: cli.py  cli_commands.py  util.py
usgs/datastore/: datastore.py
usgs/download/: download.py  download_gcp.py  download_usgs.py  scrape.py
usgs/utils/: latlong.py  scene.py
(+4 files in other folders)
