[metadata]
name = usgs
version = attr: usgs.VERSION
author = Niall McCarroll
author_email = n.f.mccarroll@reading.ac.uk, IEA, USGS
description = Tools for working with the USGS APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/surftemp/usgs
project_urls =
    Bug Tracker = https://github.com/surftemp/usgs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    usgs = usgs.cli.cli:__main__
    usgs_download = usgs.download.multithreaded_downloader:main

